ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: eidodata
 annotations:
   kubernetes.io/ingress.global-static-ip-name: streamlitweb-ip
   networking.gke.io/managed-certificates: streamlit-certificate
 labels:
   app: eidodata
spec:
 backend:
   serviceName: streamlitweb-backend
   servicePort: 8501
---
apiVersion: v1
kind: Service
metadata:
 name: streamlitweb-backend
 labels:
   app: eidodata
spec:
 type: NodePort
 selector:
   app: eidodata
   tier: web
 ports:
 - port: 8501
   targetPort: 8501
